--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Notes App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body style="background-color: white;">
+<body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
-        <a class="navbar-brand" href="#" style="color: white;" >Magic Notes </a>
+    <nav class="navbar navbar-expand-lg ">
+        <a class="navbar-brand logo" href="#">Magic Notes</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -36,21 +37,24 @@
 
 
     <div class="container my-3">
-        <h1 style="color: Black;">Welcome To Magic Notes</h1>
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Add a note</h5>
+        <h1>Welcome To Magic Notes</h1><br>
+        <div class="card0">
+            <div class="cardbody">
+                <div class="form-group">
+                    <h5 class="card-title">Add Title</h5>
+                    <input type="text" class="form-control" id="addTitle" aria-describedby="title"
+                        placeholder="Enter Title">
+                </div>
+                <h5 class="card-title">Add a Note</h5>
                 <div class="form-group">
                     <textarea class="form-control" id="addTxt" rows="3"></textarea>
                 </div>
                 <button class="btn btn-primary" id="addBtn">Add Note</button>
             </div>
-        </div>
+        </div> <br>
+        <h1 class="notes">Your Notes</h1>
         <hr>
-        <h1 style="color: Black;">Your Notes</h1>
-        <hr>
-        <div id="notes" class="row container-fluid">
-        </div>
+        <div id="notes" class="row container-fluid"> </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
